--- a/mes/CMakeLists.txt
+++ b/mes/CMakeLists.txt
@@ -8,13 +8,12 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_FLAGS "-g -O0 -Wall -Wextra -Wall")
 
 #Set your directories
-set(INCLUDE_DIR include)
 set(SOURCE_DIR src)
 
 # Include directories
 include_directories(${INCLUDE_DIR})
 
-file(GLOB_RECURSE HEADER_FILES ${INCLUDE_DIR}/*.h)
+file(GLOB_RECURSE HEADER_FILES ${SOURCE_DIR}/*.h)
 file(GLOB_RECURSE SOURCE_FILES ${SOURCE_DIR}/*.cpp)
 
 add_executable(${PROJECT_NAME} ${HEADER_FILES} ${SOURCE_FILES})
